sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:12: error: expected class or object definition
def bubbleSort() {
^AlgBubbleSort1:18: error: Unmatched closing brace '}' ignored here
}
^